NumPy_Core_Methods_Examples
Notebook showcases widely used methods with examples in NumPy.

--- a/NumPy_Core_Methods_Examples.ipynb
+++ b/NumPy_Core_Methods_Examples.ipynb
@@ -1,121 +1,316 @@
-# NumPy Core Methods — Code Examples (YouTube Shorts Mind‑Map)
-
-This notebook shows **short, copy‑paste examples** for each method appearing in the NumPy mind‑map image:
-
-1. **Array Creation**
-2. **Array Properties & Inspection**
-3. **Indexing, Slicing & Boolean Masking**
-4. **Mathematical Operations**
-5. **Linear Algebra**
-
-Run top → bottom.
-import numpy as np
-
-# Make output easier to read
-np.set_printoptions(precision=3, suppress=True)
-print('NumPy version:', np.__version__)
-## 1) Array Creation
-# np.array()
-a = np.array([1, 2, 3, 4, 5])
-b = np.array([[1, 2, 3], [4, 5, 6]])
-print('np.array([..]) ->', a)
-print('np.array([[..],[..]]) ->\n', b)
-# np.zeros() / np.ones()
-z = np.zeros((2, 3))
-o = np.ones((2, 3))
-print('zeros:\n', z)
-print('ones:\n', o)
-# np.arange() / np.linspace()
-r = np.arange(0, 10, 2)        # start, stop (exclusive), step
-l = np.linspace(0, 1, 5)       # start, stop (inclusive), num points
-print('arange:', r)
-print('linspace:', l)
-# np.random.rand() / np.random.randint()
-np.random.seed(7)
-rand = np.random.rand(2, 4)              # uniform [0,1)
-ri = np.random.randint(0, 10, size=8)    # integers [low, high)
-print('random.rand:\n', rand)
-print('random.randint:', ri)
-## 2) Array Properties & Inspection
-x = np.array([[1, 2, 3], [4, 5, 6]], dtype=np.int32)
-print('x:\n', x)
-
-# shape / ndim / dtype
-print('shape:', x.shape)
-print('ndim:', x.ndim)
-print('dtype:', x.dtype)
-# astype()
-x_float = x.astype(np.float64)
-print('astype(float64):\n', x_float)
-print('dtype after astype:', x_float.dtype)
-## 3) Indexing, Slicing & Boolean Masking
-a = np.array([-3, -1, 0, 2, 5, 7, 9])
-print('a:', a)
-
-# slicing: a[1:5]
-print('a[1:5] ->', a[1:5])  # elements at index 1,2,3,4
-# boolean masking: a[a > 0]
-print('a[a > 0] ->', a[a > 0])
-print('a[a % 2 == 1] ->', a[a % 2 == 1])
-# np.where(condition, x, y)
-pos_or_zero = np.where(a > 0, a, 0)
-print('where(a > 0, a, 0) ->', pos_or_zero)
-
-# useful: get indices where condition is True
-idx = np.where(a > 0)
-print('indices where a > 0 ->', idx, 'values:', a[idx])
-# np.take(array, indices)
-picked = np.take(a, [0, 3, 6])
-print('take indices [0,3,6] ->', picked)
-## 4) Mathematical Operations
-v = np.array([1, 2, 3, 4], dtype=float)
-print('v:', v)
-
-# np.sum() / np.mean()
-print('sum(v) ->', np.sum(v))
-print('mean(v) ->', np.mean(v))
-
-# np.sqrt()
-print('sqrt(v) ->', np.sqrt(v))
-# np.dot()
-u = np.array([10, 20, 30, 40], dtype=float)
-print('u:', u)
-print('dot(u, v) ->', np.dot(u, v))  # inner product
-## 5) Linear Algebra
-A = np.array([[1., 2.],
-              [3., 4.]])
-B = np.array([[2., 0.],
-              [1., 2.]])
-print('A:\n', A)
-print('B:\n', B)
-
-# np.dot(A, B) and A @ B do matrix multiplication
-print('dot(A, B):\n', np.dot(A, B))
-print('A @ B:\n', A @ B)
-# np.linalg.inv()
-A_inv = np.linalg.inv(A)
-print('inv(A):\n', A_inv)
-print('A @ inv(A) (should be I):\n', A @ A_inv)
-# np.linalg.eig()
-eigvals, eigvecs = np.linalg.eig(A)
-print('eigenvalues:', eigvals)
-print('eigenvectors (columns):\n', eigvecs)
-
-# Verify for first eigenpair: A v ≈ lambda v
-lam0 = eigvals[0]
-v0 = eigvecs[:, 0]
-print('A @ v0:', A @ v0)
-print('lam0 * v0:', lam0 * v0)
-# np.linalg.svd()
-U, S, Vt = np.linalg.svd(A)
-print('U:\n', U)
-print('S:', S)
-print('Vt:\n', Vt)
-
-# Reconstruct A from SVD: A = U @ diag(S) @ Vt
-A_recon = U @ np.diag(S) @ Vt
-print('Reconstructed A:\n', A_recon)
-## ✅ Next steps
-
-- Want a **single image** that matches this notebook exactly (same method list + layout)?
-- Want the same style notebook for **Pandas** or **Matplotlib**?
+{
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# NumPy Core Methods \u2014 Code Examples (YouTube Shorts Mind\u2011Map)\n",
+        "\n",
+        "This notebook shows **short, copy\u2011paste examples** for each method appearing in the NumPy mind\u2011map image:\n",
+        "\n",
+        "1. **Array Creation**\n",
+        "2. **Array Properties & Inspection**\n",
+        "3. **Indexing, Slicing & Boolean Masking**\n",
+        "4. **Mathematical Operations**\n",
+        "5. **Linear Algebra**\n",
+        "\n",
+        "Run top \u2192 bottom."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Make output easier to read\n",
+        "np.set_printoptions(precision=3, suppress=True)\n",
+        "print('NumPy version:', np.__version__)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 1) Array Creation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# np.array()\n",
+        "a = np.array([1, 2, 3, 4, 5])\n",
+        "b = np.array([[1, 2, 3], [4, 5, 6]])\n",
+        "print('np.array([..]) ->', a)\n",
+        "print('np.array([[..],[..]]) ->\\n', b)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# np.zeros() / np.ones()\n",
+        "z = np.zeros((2, 3))\n",
+        "o = np.ones((2, 3))\n",
+        "print('zeros:\\n', z)\n",
+        "print('ones:\\n', o)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# np.arange() / np.linspace()\n",
+        "r = np.arange(0, 10, 2)        # start, stop (exclusive), step\n",
+        "l = np.linspace(0, 1, 5)       # start, stop (inclusive), num points\n",
+        "print('arange:', r)\n",
+        "print('linspace:', l)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# np.random.rand() / np.random.randint()\n",
+        "np.random.seed(7)\n",
+        "rand = np.random.rand(2, 4)              # uniform [0,1)\n",
+        "ri = np.random.randint(0, 10, size=8)    # integers [low, high)\n",
+        "print('random.rand:\\n', rand)\n",
+        "print('random.randint:', ri)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 2) Array Properties & Inspection"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "x = np.array([[1, 2, 3], [4, 5, 6]], dtype=np.int32)\n",
+        "print('x:\\n', x)\n",
+        "\n",
+        "# shape / ndim / dtype\n",
+        "print('shape:', x.shape)\n",
+        "print('ndim:', x.ndim)\n",
+        "print('dtype:', x.dtype)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# astype()\n",
+        "x_float = x.astype(np.float64)\n",
+        "print('astype(float64):\\n', x_float)\n",
+        "print('dtype after astype:', x_float.dtype)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 3) Indexing, Slicing & Boolean Masking"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "a = np.array([-3, -1, 0, 2, 5, 7, 9])\n",
+        "print('a:', a)\n",
+        "\n",
+        "# slicing: a[1:5]\n",
+        "print('a[1:5] ->', a[1:5])  # elements at index 1,2,3,4"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# boolean masking: a[a > 0]\n",
+        "print('a[a > 0] ->', a[a > 0])\n",
+        "print('a[a % 2 == 1] ->', a[a % 2 == 1])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# np.where(condition, x, y)\n",
+        "pos_or_zero = np.where(a > 0, a, 0)\n",
+        "print('where(a > 0, a, 0) ->', pos_or_zero)\n",
+        "\n",
+        "# useful: get indices where condition is True\n",
+        "idx = np.where(a > 0)\n",
+        "print('indices where a > 0 ->', idx, 'values:', a[idx])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# np.take(array, indices)\n",
+        "picked = np.take(a, [0, 3, 6])\n",
+        "print('take indices [0,3,6] ->', picked)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 4) Mathematical Operations"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "v = np.array([1, 2, 3, 4], dtype=float)\n",
+        "print('v:', v)\n",
+        "\n",
+        "# np.sum() / np.mean()\n",
+        "print('sum(v) ->', np.sum(v))\n",
+        "print('mean(v) ->', np.mean(v))\n",
+        "\n",
+        "# np.sqrt()\n",
+        "print('sqrt(v) ->', np.sqrt(v))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# np.dot()\n",
+        "u = np.array([10, 20, 30, 40], dtype=float)\n",
+        "print('u:', u)\n",
+        "print('dot(u, v) ->', np.dot(u, v))  # inner product"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 5) Linear Algebra"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "A = np.array([[1., 2.],\n",
+        "              [3., 4.]])\n",
+        "B = np.array([[2., 0.],\n",
+        "              [1., 2.]])\n",
+        "print('A:\\n', A)\n",
+        "print('B:\\n', B)\n",
+        "\n",
+        "# np.dot(A, B) and A @ B do matrix multiplication\n",
+        "print('dot(A, B):\\n', np.dot(A, B))\n",
+        "print('A @ B:\\n', A @ B)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# np.linalg.inv()\n",
+        "A_inv = np.linalg.inv(A)\n",
+        "print('inv(A):\\n', A_inv)\n",
+        "print('A @ inv(A) (should be I):\\n', A @ A_inv)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# np.linalg.eig()\n",
+        "eigvals, eigvecs = np.linalg.eig(A)\n",
+        "print('eigenvalues:', eigvals)\n",
+        "print('eigenvectors (columns):\\n', eigvecs)\n",
+        "\n",
+        "# Verify for first eigenpair: A v \u2248 lambda v\n",
+        "lam0 = eigvals[0]\n",
+        "v0 = eigvecs[:, 0]\n",
+        "print('A @ v0:', A @ v0)\n",
+        "print('lam0 * v0:', lam0 * v0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# np.linalg.svd()\n",
+        "U, S, Vt = np.linalg.svd(A)\n",
+        "print('U:\\n', U)\n",
+        "print('S:', S)\n",
+        "print('Vt:\\n', Vt)\n",
+        "\n",
+        "# Reconstruct A from SVD: A = U @ diag(S) @ Vt\n",
+        "A_recon = U @ np.diag(S) @ Vt\n",
+        "print('Reconstructed A:\\n', A_recon)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## \u2705 Next steps\n",
+        "\n",
+        "- Want a **single image** that matches this notebook exactly (same method list + layout)?\n",
+        "- Want the same style notebook for **Pandas** or **Matplotlib**?\n"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.x"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
+}
