--- a/NumPy_Core_Methods_Examples.ipynb
+++ b/NumPy_Core_Methods_Examples.ipynb
@@ -4,9 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# NumPy Core Methods \u2014 Code Examples (YouTube Shorts Mind\u2011Map)\n",
+        "# NumPy Core Methods — Code Examples (YouTube Shorts Mind‑Map)\n",
         "\n",
-        "This notebook shows **short, copy\u2011paste examples** for each method appearing in the NumPy mind\u2011map image:\n",
+        "This notebook shows **short, copy‑paste examples** for each method appearing in the NumPy mind‑map image:\n",
         "\n",
         "1. **Array Creation**\n",
         "2. **Array Properties & Inspection**\n",
@@ -14,7 +14,7 @@
         "4. **Mathematical Operations**\n",
         "5. **Linear Algebra**\n",
         "\n",
-        "Run top \u2192 bottom."
+        "Run top → bottom."
       ]
     },
     {
@@ -265,7 +265,7 @@
         "print('eigenvalues:', eigvals)\n",
         "print('eigenvectors (columns):\\n', eigvecs)\n",
         "\n",
-        "# Verify for first eigenpair: A v \u2248 lambda v\n",
+        "# Verify for first eigenpair: A v ≈ lambda v\n",
         "lam0 = eigvals[0]\n",
         "v0 = eigvecs[:, 0]\n",
         "print('A @ v0:', A @ v0)\n",
@@ -288,7 +288,7 @@
         "A_recon = U @ np.diag(S) @ Vt\n",
         "print('Reconstructed A:\\n', A_recon)"
       ]
-    },
+    }
   ],
   "metadata": {
     "kernelspec": {
